# rscp

./: .gitignore  LICENSE  README.md  communication_sequence.md  frame_format.md
.github/workflows/: build_protobuf.yml  build_python.yml  docker_publish.yml
docker/: Dockerfile-python
examples/: aruco_detection_example.py
examples/python/: receive_commands.py  receive_commands_noserial.py  send_rover_status_message.py  send_string_message.py
proto/: rscp.proto
scripts/: generate_proto.py  release_setup.py
src/python/: setup.cfg
src/python/rscp/: frame_parser.py
src/python/rscp/message/: base.py  broker.py  parser.py  types.py
src/python/scripts/: create_virtual_ports.sh
src/python/test/: test_broker.py  test_frame_parser.py  test_frame_serialization.py  test_message_serialization.py
