[metadata]
name = rscp
version = 0.1.0
author = Sencer Yazici
author_email = senceryazici@gmail.com
description = Rover Satellite Communications Protocol Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anatolianroverchallenge/rscp
project_urls =
    Bug Tracker = https://github.com/anatolianroverchallenge/rscp/issues
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    unittest2>=1.1.0
    crc>=7.0.0
    pyserial>=3.5
    construct>=2.10.70
    pyyaml>=6.0.1

[options.packages.find]
where = .

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = test
